# psyneulink-ui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/psyneulink_ui/: __init__.py  cli.py  routes.py  server.py  sse.py  state.py
src/psyneulink_ui/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_routes.py  test_sse.py  test_state.py
