[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psyneulink-ui"
version = "0.1.0"
description = "Web UI for psyneulink-ai: two-pane chat + live composition graph."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # The sibling agent core. Pinned via [tool.uv.sources] below to the
    # editable path — version constraint is intentionally loose so the
    # in-tree 0.0.x agent satisfies it.
    "psyneulink-agent>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
psyneulink-ui = "psyneulink_ui.cli:main"

[tool.uv.sources]
psyneulink-agent = { path = "../psyneulink-agent", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/psyneulink_ui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
